--- a/examples/ucs_distance/Kconfig
+++ b/examples/ucs_distance/Kconfig
@@ -1,9 +1,9 @@
 config UCS_DISTANC_EXAMPLE
-	bool "UCS demo - microROS Distance Publisher over 6LoWPAN"
+	bool "UCS - microROS TFMINI Publisher over 6LoWPAN"
 	default n
 	depends on UROS
 	---help---
-		Enable the uROS distance publisher example over 6LoWPAN radio communication
+		Enable the uROS TFMini distance publisher over 6LoWPAN radio communication
 
 if UCS_DISTANC_EXAMPLE
 
