--- a/examples/ucs_sub/Kconfig
+++ b/examples/ucs_sub/Kconfig
@@ -1,9 +1,9 @@
 config UCS_SUB_EXAMPLE
-	bool "UCS demo - microROS Distance Subscriber over 6LoWPAN"
+	bool "UCS - microROS Distance Subscriber over 6LoWPAN"
 	default n
 	depends on UROS
 	---help---
-		Enable the ucs demo subscriber example over 6LoWPAN radio communication
+		Enable the ucs test subscriber over 6LoWPAN radio communication
 
 if UCS_SUB_EXAMPLE
 
